--- a/src/public/css/screens/workout.css
+++ b/src/public/css/screens/workout.css
@@ -1,8 +1,14 @@
+.stopwatch,
+.break {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 /* Stopwatch */
 
 .stopwatch__container {
-  justify-content: center;
-  min-height: min-content;
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -43,8 +49,6 @@
 
 /* Break */
 .break__container {
-  justify-content: center;
-  min-height: min-content;
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -56,8 +60,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: auto;
   background-color: var(--color-pink);
+  margin-bottom: 40px;
 }
 
 .remain-time,
@@ -83,5 +87,4 @@
 
 .break-end-btn {
   width: 100%;
-  margin: 15px 0;
 }
