--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -59,7 +59,7 @@ body {
   display: none;
 }
 .break__container {
-  /* display: none; */
+  display: none;
 }
 .records__container {
   display: none;
